src/parser.output
   0  $accept : %entry% $end

   1  program : NEWLINE statements EOF

   2  statements :
   3             | statement statements

   4  statement : stmt_simple NEWLINE
   5            | stmt_compound

   6  stmt_simple : declaration
   7              | assignment
   8              | expression_statement
   9              | return_statement

  10  stmt_compound : function_def
  11                | for_loop
  12                | while_loop
  13                | if_statement
  14                | elif_statement
  15                | else_statement

  16  declaration : LET ID COLON typ ASSIGN expression
  17              | LET ID COLON typ
  18              | LET ID ASSIGN expression
  19              | LET ID

  20  assignment : ID ASSIGN expression

  21  return_statement : RETURN expression

  22  expression_statement : expression

  23  function_def : DEF ID LPAREN parameters_opt RPAREN ARROW typ COLON NEWLINE INDENT statements DEDENT

  24  parameters_opt :
  25                 | parameters

  26  parameters : binding
  27             | binding COMMA parameters

  28  binding : ID COLON typ

  29  for_loop : FOR LPAREN expression COMMA expression RPAREN COLON NEWLINE INDENT statements DEDENT

  30  while_loop : WHILE LPAREN expression RPAREN COLON NEWLINE INDENT statements DEDENT

  31  if_statement : IF LPAREN expression RPAREN COLON NEWLINE INDENT statements DEDENT

  32  elif_statement : ELIF LPAREN expression RPAREN COLON NEWLINE INDENT statements DEDENT

  33  else_statement : ELSE COLON NEWLINE INDENT statements DEDENT

  34  typ : INT
  35      | BOOL
  36      | FLOAT
  37      | CHAR
  38      | STRING

  39  expression : INT_LIT
  40             | BOOL_LIT
  41             | CHAR_LIT
  42             | FLOAT_LIT
  43             | STRING_LIT
  44             | ID
  45             | expression PLUS expression
  46             | expression MINUS expression
  47             | expression TIMES expression
  48             | expression DIVIDE expression
  49             | expression EQ expression
  50             | expression NEQ expression
  51             | expression LT expression
  52             | expression LEQ expression
  53             | expression GT expression
  54             | expression GEQ expression
  55             | expression MAP expression
  56             | expression FILTER expression
  57             | expression REDUCE expression WITH expression
  58             | function_call
  59             | LPAREN expression RPAREN
  60             | LPAREN expression RPAREN DOT ID LPAREN arguments_opt RPAREN

  61  function_call : ID LPAREN arguments_opt RPAREN

  62  arguments_opt :
  63                | arguments

  64  arguments : expression
  65            | expression COMMA arguments

  66  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (66)

	NEWLINE  shift 3
	.  error

	program  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : NEWLINE . statements EOF  (1)
	statements : .  (2)

	LPAREN  shift 5
	IF  shift 6
	ELSE  shift 7
	ELIF  shift 8
	FOR  shift 9
	WHILE  shift 10
	RETURN  shift 11
	DEF  shift 12
	LET  shift 13
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 19
	EOF  reduce 2

	statements  goto 20
	statement  goto 21
	stmt_simple  goto 22
	stmt_compound  goto 23
	declaration  goto 24
	assignment  goto 25
	expression_statement  goto 26
	return_statement  goto 27
	function_def  goto 28
	for_loop  goto 29
	while_loop  goto 30
	if_statement  goto 31
	elif_statement  goto 32
	else_statement  goto 33
	expression  goto 34
	function_call  goto 35


state 4
	%entry% : '\001' program .  (66)

	.  reduce 66


state 5
	expression : LPAREN . expression RPAREN  (59)
	expression : LPAREN . expression RPAREN DOT ID LPAREN arguments_opt RPAREN  (60)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 37
	function_call  goto 35


state 6
	if_statement : IF . LPAREN expression RPAREN COLON NEWLINE INDENT statements DEDENT  (31)

	LPAREN  shift 38
	.  error


state 7
	else_statement : ELSE . COLON NEWLINE INDENT statements DEDENT  (33)

	COLON  shift 39
	.  error


state 8
	elif_statement : ELIF . LPAREN expression RPAREN COLON NEWLINE INDENT statements DEDENT  (32)

	LPAREN  shift 40
	.  error


state 9
	for_loop : FOR . LPAREN expression COMMA expression RPAREN COLON NEWLINE INDENT statements DEDENT  (29)

	LPAREN  shift 41
	.  error


state 10
	while_loop : WHILE . LPAREN expression RPAREN COLON NEWLINE INDENT statements DEDENT  (30)

	LPAREN  shift 42
	.  error


state 11
	return_statement : RETURN . expression  (21)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 43
	function_call  goto 35


state 12
	function_def : DEF . ID LPAREN parameters_opt RPAREN ARROW typ COLON NEWLINE INDENT statements DEDENT  (23)

	ID  shift 44
	.  error


state 13
	declaration : LET . ID COLON typ ASSIGN expression  (16)
	declaration : LET . ID COLON typ  (17)
	declaration : LET . ID ASSIGN expression  (18)
	declaration : LET . ID  (19)

	ID  shift 45
	.  error


state 14
	expression : INT_LIT .  (39)

	.  reduce 39


state 15
	expression : FLOAT_LIT .  (42)

	.  reduce 42


state 16
	expression : BOOL_LIT .  (40)

	.  reduce 40


state 17
	expression : CHAR_LIT .  (41)

	.  reduce 41


state 18
	expression : STRING_LIT .  (43)

	.  reduce 43


state 19
	assignment : ID . ASSIGN expression  (20)
	expression : ID .  (44)
	function_call : ID . LPAREN arguments_opt RPAREN  (61)

	LPAREN  shift 46
	ASSIGN  shift 47
	NEWLINE  reduce 44
	PLUS  reduce 44
	MINUS  reduce 44
	TIMES  reduce 44
	DIVIDE  reduce 44
	EQ  reduce 44
	NEQ  reduce 44
	GT  reduce 44
	LT  reduce 44
	GEQ  reduce 44
	LEQ  reduce 44
	MAP  reduce 44
	FILTER  reduce 44
	REDUCE  reduce 44


state 20
	program : NEWLINE statements . EOF  (1)

	EOF  shift 48
	.  error


state 21
	statements : statement . statements  (3)
	statements : .  (2)

	LPAREN  shift 5
	IF  shift 6
	ELSE  shift 7
	ELIF  shift 8
	FOR  shift 9
	WHILE  shift 10
	RETURN  shift 11
	DEF  shift 12
	LET  shift 13
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 19
	EOF  reduce 2
	DEDENT  reduce 2

	statements  goto 49
	statement  goto 21
	stmt_simple  goto 22
	stmt_compound  goto 23
	declaration  goto 24
	assignment  goto 25
	expression_statement  goto 26
	return_statement  goto 27
	function_def  goto 28
	for_loop  goto 29
	while_loop  goto 30
	if_statement  goto 31
	elif_statement  goto 32
	else_statement  goto 33
	expression  goto 34
	function_call  goto 35


state 22
	statement : stmt_simple . NEWLINE  (4)

	NEWLINE  shift 50
	.  error


state 23
	statement : stmt_compound .  (5)

	.  reduce 5


state 24
	stmt_simple : declaration .  (6)

	.  reduce 6


state 25
	stmt_simple : assignment .  (7)

	.  reduce 7


state 26
	stmt_simple : expression_statement .  (8)

	.  reduce 8


state 27
	stmt_simple : return_statement .  (9)

	.  reduce 9


state 28
	stmt_compound : function_def .  (10)

	.  reduce 10


state 29
	stmt_compound : for_loop .  (11)

	.  reduce 11


state 30
	stmt_compound : while_loop .  (12)

	.  reduce 12


state 31
	stmt_compound : if_statement .  (13)

	.  reduce 13


state 32
	stmt_compound : elif_statement .  (14)

	.  reduce 14


state 33
	stmt_compound : else_statement .  (15)

	.  reduce 15


state 34
	expression_statement : expression .  (22)
	expression : expression . PLUS expression  (45)
	expression : expression . MINUS expression  (46)
	expression : expression . TIMES expression  (47)
	expression : expression . DIVIDE expression  (48)
	expression : expression . EQ expression  (49)
	expression : expression . NEQ expression  (50)
	expression : expression . LT expression  (51)
	expression : expression . LEQ expression  (52)
	expression : expression . GT expression  (53)
	expression : expression . GEQ expression  (54)
	expression : expression . MAP expression  (55)
	expression : expression . FILTER expression  (56)
	expression : expression . REDUCE expression WITH expression  (57)

	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIVIDE  shift 54
	EQ  shift 55
	NEQ  shift 56
	GT  shift 57
	LT  shift 58
	GEQ  shift 59
	LEQ  shift 60
	MAP  shift 61
	FILTER  shift 62
	REDUCE  shift 63
	NEWLINE  reduce 22


state 35
	expression : function_call .  (58)

	.  reduce 58


state 36
	expression : ID .  (44)
	function_call : ID . LPAREN arguments_opt RPAREN  (61)

	LPAREN  shift 46
	NEWLINE  reduce 44
	RPAREN  reduce 44
	COMMA  reduce 44
	PLUS  reduce 44
	MINUS  reduce 44
	TIMES  reduce 44
	DIVIDE  reduce 44
	EQ  reduce 44
	NEQ  reduce 44
	GT  reduce 44
	LT  reduce 44
	GEQ  reduce 44
	LEQ  reduce 44
	MAP  reduce 44
	FILTER  reduce 44
	REDUCE  reduce 44
	WITH  reduce 44


state 37
	expression : expression . PLUS expression  (45)
	expression : expression . MINUS expression  (46)
	expression : expression . TIMES expression  (47)
	expression : expression . DIVIDE expression  (48)
	expression : expression . EQ expression  (49)
	expression : expression . NEQ expression  (50)
	expression : expression . LT expression  (51)
	expression : expression . LEQ expression  (52)
	expression : expression . GT expression  (53)
	expression : expression . GEQ expression  (54)
	expression : expression . MAP expression  (55)
	expression : expression . FILTER expression  (56)
	expression : expression . REDUCE expression WITH expression  (57)
	expression : LPAREN expression . RPAREN  (59)
	expression : LPAREN expression . RPAREN DOT ID LPAREN arguments_opt RPAREN  (60)

	RPAREN  shift 64
	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIVIDE  shift 54
	EQ  shift 55
	NEQ  shift 56
	GT  shift 57
	LT  shift 58
	GEQ  shift 59
	LEQ  shift 60
	MAP  shift 61
	FILTER  shift 62
	REDUCE  shift 63
	.  error


state 38
	if_statement : IF LPAREN . expression RPAREN COLON NEWLINE INDENT statements DEDENT  (31)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 65
	function_call  goto 35


state 39
	else_statement : ELSE COLON . NEWLINE INDENT statements DEDENT  (33)

	NEWLINE  shift 66
	.  error


state 40
	elif_statement : ELIF LPAREN . expression RPAREN COLON NEWLINE INDENT statements DEDENT  (32)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 67
	function_call  goto 35


state 41
	for_loop : FOR LPAREN . expression COMMA expression RPAREN COLON NEWLINE INDENT statements DEDENT  (29)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 68
	function_call  goto 35


state 42
	while_loop : WHILE LPAREN . expression RPAREN COLON NEWLINE INDENT statements DEDENT  (30)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 69
	function_call  goto 35


state 43
	return_statement : RETURN expression .  (21)
	expression : expression . PLUS expression  (45)
	expression : expression . MINUS expression  (46)
	expression : expression . TIMES expression  (47)
	expression : expression . DIVIDE expression  (48)
	expression : expression . EQ expression  (49)
	expression : expression . NEQ expression  (50)
	expression : expression . LT expression  (51)
	expression : expression . LEQ expression  (52)
	expression : expression . GT expression  (53)
	expression : expression . GEQ expression  (54)
	expression : expression . MAP expression  (55)
	expression : expression . FILTER expression  (56)
	expression : expression . REDUCE expression WITH expression  (57)

	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIVIDE  shift 54
	EQ  shift 55
	NEQ  shift 56
	GT  shift 57
	LT  shift 58
	GEQ  shift 59
	LEQ  shift 60
	MAP  shift 61
	FILTER  shift 62
	REDUCE  shift 63
	NEWLINE  reduce 21


state 44
	function_def : DEF ID . LPAREN parameters_opt RPAREN ARROW typ COLON NEWLINE INDENT statements DEDENT  (23)

	LPAREN  shift 70
	.  error


state 45
	declaration : LET ID . COLON typ ASSIGN expression  (16)
	declaration : LET ID . COLON typ  (17)
	declaration : LET ID . ASSIGN expression  (18)
	declaration : LET ID .  (19)

	COLON  shift 71
	ASSIGN  shift 72
	NEWLINE  reduce 19


state 46
	function_call : ID LPAREN . arguments_opt RPAREN  (61)
	arguments_opt : .  (62)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	RPAREN  reduce 62

	expression  goto 73
	function_call  goto 35
	arguments_opt  goto 74
	arguments  goto 75


state 47
	assignment : ID ASSIGN . expression  (20)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 76
	function_call  goto 35


state 48
	program : NEWLINE statements EOF .  (1)

	.  reduce 1


state 49
	statements : statement statements .  (3)

	.  reduce 3


state 50
	statement : stmt_simple NEWLINE .  (4)

	.  reduce 4


state 51
	expression : expression PLUS . expression  (45)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 77
	function_call  goto 35


state 52
	expression : expression MINUS . expression  (46)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 78
	function_call  goto 35


state 53
	expression : expression TIMES . expression  (47)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 79
	function_call  goto 35


state 54
	expression : expression DIVIDE . expression  (48)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 80
	function_call  goto 35


state 55
	expression : expression EQ . expression  (49)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 81
	function_call  goto 35


state 56
	expression : expression NEQ . expression  (50)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 82
	function_call  goto 35


state 57
	expression : expression GT . expression  (53)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 83
	function_call  goto 35


state 58
	expression : expression LT . expression  (51)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 84
	function_call  goto 35


state 59
	expression : expression GEQ . expression  (54)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 85
	function_call  goto 35


state 60
	expression : expression LEQ . expression  (52)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 86
	function_call  goto 35


state 61
	expression : expression MAP . expression  (55)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 87
	function_call  goto 35


state 62
	expression : expression FILTER . expression  (56)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 88
	function_call  goto 35


state 63
	expression : expression REDUCE . expression WITH expression  (57)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 89
	function_call  goto 35


state 64
	expression : LPAREN expression RPAREN .  (59)
	expression : LPAREN expression RPAREN . DOT ID LPAREN arguments_opt RPAREN  (60)

	DOT  shift 90
	NEWLINE  reduce 59
	RPAREN  reduce 59
	COMMA  reduce 59
	PLUS  reduce 59
	MINUS  reduce 59
	TIMES  reduce 59
	DIVIDE  reduce 59
	EQ  reduce 59
	NEQ  reduce 59
	GT  reduce 59
	LT  reduce 59
	GEQ  reduce 59
	LEQ  reduce 59
	MAP  reduce 59
	FILTER  reduce 59
	REDUCE  reduce 59
	WITH  reduce 59


state 65
	if_statement : IF LPAREN expression . RPAREN COLON NEWLINE INDENT statements DEDENT  (31)
	expression : expression . PLUS expression  (45)
	expression : expression . MINUS expression  (46)
	expression : expression . TIMES expression  (47)
	expression : expression . DIVIDE expression  (48)
	expression : expression . EQ expression  (49)
	expression : expression . NEQ expression  (50)
	expression : expression . LT expression  (51)
	expression : expression . LEQ expression  (52)
	expression : expression . GT expression  (53)
	expression : expression . GEQ expression  (54)
	expression : expression . MAP expression  (55)
	expression : expression . FILTER expression  (56)
	expression : expression . REDUCE expression WITH expression  (57)

	RPAREN  shift 91
	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIVIDE  shift 54
	EQ  shift 55
	NEQ  shift 56
	GT  shift 57
	LT  shift 58
	GEQ  shift 59
	LEQ  shift 60
	MAP  shift 61
	FILTER  shift 62
	REDUCE  shift 63
	.  error


state 66
	else_statement : ELSE COLON NEWLINE . INDENT statements DEDENT  (33)

	INDENT  shift 92
	.  error


state 67
	elif_statement : ELIF LPAREN expression . RPAREN COLON NEWLINE INDENT statements DEDENT  (32)
	expression : expression . PLUS expression  (45)
	expression : expression . MINUS expression  (46)
	expression : expression . TIMES expression  (47)
	expression : expression . DIVIDE expression  (48)
	expression : expression . EQ expression  (49)
	expression : expression . NEQ expression  (50)
	expression : expression . LT expression  (51)
	expression : expression . LEQ expression  (52)
	expression : expression . GT expression  (53)
	expression : expression . GEQ expression  (54)
	expression : expression . MAP expression  (55)
	expression : expression . FILTER expression  (56)
	expression : expression . REDUCE expression WITH expression  (57)

	RPAREN  shift 93
	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIVIDE  shift 54
	EQ  shift 55
	NEQ  shift 56
	GT  shift 57
	LT  shift 58
	GEQ  shift 59
	LEQ  shift 60
	MAP  shift 61
	FILTER  shift 62
	REDUCE  shift 63
	.  error


state 68
	for_loop : FOR LPAREN expression . COMMA expression RPAREN COLON NEWLINE INDENT statements DEDENT  (29)
	expression : expression . PLUS expression  (45)
	expression : expression . MINUS expression  (46)
	expression : expression . TIMES expression  (47)
	expression : expression . DIVIDE expression  (48)
	expression : expression . EQ expression  (49)
	expression : expression . NEQ expression  (50)
	expression : expression . LT expression  (51)
	expression : expression . LEQ expression  (52)
	expression : expression . GT expression  (53)
	expression : expression . GEQ expression  (54)
	expression : expression . MAP expression  (55)
	expression : expression . FILTER expression  (56)
	expression : expression . REDUCE expression WITH expression  (57)

	COMMA  shift 94
	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIVIDE  shift 54
	EQ  shift 55
	NEQ  shift 56
	GT  shift 57
	LT  shift 58
	GEQ  shift 59
	LEQ  shift 60
	MAP  shift 61
	FILTER  shift 62
	REDUCE  shift 63
	.  error


state 69
	while_loop : WHILE LPAREN expression . RPAREN COLON NEWLINE INDENT statements DEDENT  (30)
	expression : expression . PLUS expression  (45)
	expression : expression . MINUS expression  (46)
	expression : expression . TIMES expression  (47)
	expression : expression . DIVIDE expression  (48)
	expression : expression . EQ expression  (49)
	expression : expression . NEQ expression  (50)
	expression : expression . LT expression  (51)
	expression : expression . LEQ expression  (52)
	expression : expression . GT expression  (53)
	expression : expression . GEQ expression  (54)
	expression : expression . MAP expression  (55)
	expression : expression . FILTER expression  (56)
	expression : expression . REDUCE expression WITH expression  (57)

	RPAREN  shift 95
	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIVIDE  shift 54
	EQ  shift 55
	NEQ  shift 56
	GT  shift 57
	LT  shift 58
	GEQ  shift 59
	LEQ  shift 60
	MAP  shift 61
	FILTER  shift 62
	REDUCE  shift 63
	.  error


state 70
	function_def : DEF ID LPAREN . parameters_opt RPAREN ARROW typ COLON NEWLINE INDENT statements DEDENT  (23)
	parameters_opt : .  (24)

	ID  shift 96
	RPAREN  reduce 24

	parameters_opt  goto 97
	parameters  goto 98
	binding  goto 99


state 71
	declaration : LET ID COLON . typ ASSIGN expression  (16)
	declaration : LET ID COLON . typ  (17)

	BOOL  shift 100
	INT  shift 101
	FLOAT  shift 102
	CHAR  shift 103
	STRING  shift 104
	.  error

	typ  goto 105


state 72
	declaration : LET ID ASSIGN . expression  (18)

	LPAREN  shift 5
	INT_LIT  shift 14
	FLOAT_LIT  shift 15
	BOOL_LIT  shift 16
	CHAR_LIT  shift 17
	STRING_LIT  shift 18
	ID  shift 36
	.  error

	expression  goto 106
	function_call  goto 35

